transitions and responsiveness
--> Add of some transitions;
--> Starting work with responsiveness in other media queries than 'max 768px'.

--- a/html/index.html
+++ b/html/index.html
@@ -85,7 +85,7 @@
 
          <article id="characteristics">
             <p id="char_intro">
-               After incessant frustration wth bugs and errors, we noticed that this was poviding competitive advantages. Therefore, they were reinforced and controlled, in order to make bugs, deliberate errors for the consolidation of fundamental advantages.
+               After incessant frustration with bugs and errors, we have noticed that this was poviding competitive advantages. Therefore, they were reinforced and controlled, in order to make bugs, deliberate errors for the consolidation of fundamental advantages.
             </p>
             <div id="char_slides">
                <button id="char_back" class="char_button" type="button" onclick="charButtonClick('back')"><span class="material-symbols-outlined">arrow_back_ios</span></button>
