'order now' size
--> Order Now button corrected.

--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
       <div id="header">
          <header class="display_flex">
             <h1>Fabio O.S. Netto</h1>
-            <div id="header_order_now">
+            <div id="header_order_now" class="display_flex">
                <p><a id="order_now" href="https://api.whatsapp.com/send/?phone=5548998416704&text=Bring%20me%20that%20Experience!" target="_blank" rel="next">Order Now</a></p>
             </div>
          </header>
