arrows - referring local
--> Referring google material (slides arrows) on local scope.

--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,17 @@
       <title>Fabio O.S. Netto</title>
    </head>
    
-   
+   <style>
+      .material-symbols-outlined {
+         font-variation-settings:
+         'FILL' 0,
+         'wght' 800,
+         'GRAD' 0,
+         'opsz' 48
+      }
+   </style>
+
+
    <body onload="adjustments(), charSlidesLoad()" onresize="adjustments()">
       <div id="header">
          <header class="display_flex">
