--- a/html/index.html
+++ b/html/index.html
@@ -19,6 +19,7 @@
    
    <style>
       .material-symbols-outlined {
+         font-display: fallback;
          font-variation-settings:
          'FILL' 0,
          'wght' 800,
