slides, website max-width
--> "Individualism" slide corrected (size of text area);
--> All website responsiveness to max width.

--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@
    </style>
 
 
-   <body onload="adjustments(), charSlidesLoad()" onresize="adjustments()">
+   <body onload="adjustments()" onresize="adjustments()">
       <div id="header">
          <header class="display_flex">
             <h1>Fabio O.S. Netto</h1>
@@ -47,7 +47,7 @@
          </nav>
       </div>
 
-      <main>
+      <main class="display_flex">
          <div id="intro_banner_bg" class="bgFixed"></div>
             <section id="intro_banner" class="display_flex">
                <div id="intro_banner_txt">
