defer and slides transitions
--> 'defer' attribute added on JavaScript link;
--> Characteristics slides improved: smoothly transition.

--- a/html/index.html
+++ b/html/index.html
@@ -99,16 +99,6 @@
                After incessant frustration with bugs and errors, we have noticed that this was poviding competitive advantages. Therefore, they were reinforced and controlled, in order to make bugs, deliberate errors for the consolidation of fundamental advantages.
             </p>
             <div id="char_slides">
-               <button id="char_back" class="char_button" type="button" onclick="charButtonClick('back')"><span class="material-symbols-outlined">arrow_back_ios</span></button>
-               
-               <button id="char_forward" class="char_button" type="button" onclick="charButtonClick('forward')"><span class="material-symbols-outlined">arrow_forward_ios</span></button>
-
-               <div id="slideMK_container" class="display_flex">
-                  <div id="mk_1" class="slide_marker"></div>
-                  <div id="mk_2" class="slide_marker"></div>
-                  <div id="mk_3" class="slide_marker"></div>
-               </div>
-
                <section id="individualism" class="display_flex">
                   <div id="idv_txt_container">
                      <p><strong>Individualism</strong>: possibily viewed as self-centeredness, brings determination and ambition to do one's best to solve problems in the most adverse situations. It is difficult to ask for help, however, nothing that prevents good teamwork, once everything is well organized.</p>
@@ -124,6 +114,16 @@
                      <p><strong>Perfectionism</strong>: in previous versions, given only by  self-demand. However, in its most recent version, we have controlled the impulses of his mind so that he can calmly use it as advantage for refined work, without falling into paranoia.</p>
                   </div>
                </section>
+
+               <button id="char_back" class="char_button" type="button" onclick="charButtonClick('back')"><span class="material-symbols-outlined">arrow_back_ios</span></button>
+               
+               <button id="char_forward" class="char_button" type="button" onclick="charButtonClick('forward')"><span class="material-symbols-outlined">arrow_forward_ios</span></button>
+
+               <div id="slideMK_container" class="display_flex">
+                  <div id="mk_1" class="slide_marker"></div>
+                  <div id="mk_2" class="slide_marker"></div>
+                  <div id="mk_3" class="slide_marker"></div>
+               </div>
             </div>
          </article>
 
@@ -165,5 +165,5 @@
       </footer>
    </body>
 
-   <script src="../js/responsiveness.js"></script>
+   <script src="../js/responsiveness.js" defer></script>
 </html>
