--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,19 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
       <!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">-->
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+      <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
+      <style>
+         .material-symbols-outlined {
+            font-display: fallback;
+            font-variation-settings:
+            'FILL' 0,
+            'wght' 800,
+            'GRAD' 0,
+            'opsz' 48
+         }
+      </style>
+
       <link rel="stylesheet" href="../css/styles-all.css"     media="screen">
       <link rel="stylesheet" href="../css/styles-768max.css"  media="screen and (max-width: 768px)">
       <link rel="stylesheet" href="../css/styles-768min.css"  media="screen and (min-width: 769px)">
@@ -16,18 +28,6 @@
 
       <title>Fabio O.S. Netto</title>
    </head>
-   
-   <style>
-      .material-symbols-outlined {
-         font-display: fallback;
-         font-variation-settings:
-         'FILL' 0,
-         'wght' 800,
-         'GRAD' 0,
-         'opsz' 48
-      }
-   </style>
-
 
    <body onload="adjustments()" onresize="adjustments()">
       <div id="header">
