nav and other media queries
--> 'nav' finally developed (no functional - read-only);
--> Some adjustments on working with media queries;

--- a/html/index.html
+++ b/html/index.html
@@ -39,45 +39,46 @@
          </header>
          <nav class="mobile_none">
             <ul>
-               <li>Who Am I?</li>
-               <li>Goals</li>
-               <li>Skills</li>
-               <li>Contact Me</li>
+               <li id="nav_li_1">Who Am I?</li>
+               <li id="nav_li_2">Goals</li>
+               <li id="nav_li_3">Skills</li>
+               <li id="nav_li_4">Contact Me</li>
             </ul>
          </nav>
       </div>
 
       <main class="display_flex">
          <div id="intro_banner_bg" class="bgFixed"></div>
-            <section id="intro_banner" class="display_flex">
-               <div id="intro_banner_txt">
-                  <h2>FOSN 2023</h2>
-                  <p>Tolerance, dialogue.</p>
-                  <p>No prejudices, no judgements.</p>
-               </div>
-
-               <div id="intro_banner_href">
-                  <p><a href="../html/fosn_versions.html" rel="next" target="_blank">See previous versions</a></p>
-               </div>
-            </section>
+               <section id="intro_banner" class="display_flex">
+                  <div id="intro_banner_txt">
+                     <h2>FOSN 2023</h2>
+                     <p>Tolerance, dialogue.</p>
+                     <p>No prejudices, no judgements.</p>
+                  </div>
+                  <div id="intro_banner_href">
+                     <p><a href="../html/fosn_versions.html" rel="next" target="_blank">See previous versions</a></p>
+                  </div>
+               </section>
 
          <div id="presentment">
-            <section id="improvement" class="display_flex">
-               <div class="display_flex column">
-                  <p id="presentment_intro">Keeping the robustess of its coldness, now with compatibility for emotional understanding</p>
-               </div>
-
-               <div class="display_flex column">
-                  <p id="cutting_edge" class="mobile_none">Your brain piece has been equipped with <strong>cutting-edge</strong> upgrades, bringing your <strong>rationality</strong> and <strong>emotional</strong> intelligence to work together!</p>
-                  <div id="cold_emote" class="display_flex">
-                     <div id="cold"></div>
-                     <div id="big_big">
-                        <p>A big<br><strong>challenge</strong><br>A big<br><strong>result</strong></p>
-                     </div>
-                     <div id="emote"></div>
+            <div id="intro_banner_container" style="background-color: #bc5d2e;">
+               <section id="improvement" class="display_flex">
+                  <div class="display_flex column">
+                     <p id="presentment_intro">Keeping the robustess of its coldness, now with compatibility for emotional understanding</p>
                   </div>
-               </div>
-            </section>
+
+                  <div class="display_flex column">
+                     <p id="cutting_edge" class="mobile_none">Your brain piece has been equipped with <strong>cutting-edge</strong> upgrades, bringing your <strong>rationality</strong> and <strong>emotional</strong> intelligence to work together!</p>
+                     <div id="cold_emote" class="display_flex">
+                        <div id="cold"></div>
+                        <div id="big_big">
+                           <p>A big<br><strong>challenge</strong><br>A big<br><strong>result</strong></p>
+                        </div>
+                        <div id="emote"></div>
+                     </div>
+                  </div>
+               </section>
+            </div>
 
             <div id="parallax_line"></div>
 
