--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,10 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
       <!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">-->
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
+      <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>-->
+
+      <link rel="preload" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" as="style" onload="this.onload=null;this.rel='stylesheet'">
+      <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"></noscript>
 
       <link rel="stylesheet" href="../css/styles-all.css"     media="screen">
       <link rel="stylesheet" href="../css/styles-768max.css"  media="screen and (max-width: 768px)">
