story article and +details
--> Some details like borders and font colors changed;
--> Work on 'story' article started (some images added, fonts and alignments).

--- a/html/index.html
+++ b/html/index.html
@@ -83,9 +83,9 @@
                </section>
             </div>
 
-            <div id="parallax_line"></div>
+            <div class="parallax_line"></div>
 
-            <div style="background-color: black;">
+            <div style="background-color: black; padding-bottom: 2em;">
                <section>
                   <div id="optimism" class="display_flex">
                      <p id="bef_joker" class="ltb">
@@ -104,7 +104,9 @@
             </div>
          </div>
 
-         <div style="background-color: black;">
+         <div class="parallax_line"></div>
+
+         <div style="background-color: black; padding-top: 2em;">
             <article id="characteristics">
                <div id="char_id_container">
                   <p id="char_intro">
@@ -114,19 +116,20 @@
                <div id="char_slides">
                   <section id="individualism" class="display_flex">
                      <div id="idv_txt_container">
-                        <p><strong>Individualism</strong>: possibily viewed as self-centeredness, brings determination and ambition to do one's best to solve problems in the most adverse situations. It is difficult to ask for help, however, nothing that prevents good teamwork, once everything is well organized.</p>
+                        <p><strong class="char_titles">Individualism</strong><br><br> Possibily viewed as self-centeredness, brings determination and ambition to do one's best to solve problems in the most adverse situations. It is difficult to ask for help, however, nothing that prevents <strong>good teamwork</strong>, once everything is well organized.</p>
                      </div>
                   </section>
                   <section id="diversion_attention" class="display_flex">
                      <div id="datt_txt_container">
-                        <p><strong>Diversion of Attention:</strong> attention is despersed, often requiring specific environments for productivity (music, comfort, energy drinks, chocolate...). It may take a while to get a goo focus, since this goes hand in hand with pleasure, but whenever present, it is a hyperfocus, to the point of forgeting everything around.</p>
+                        <p><strong class="char_titles">Diversion of Attention</strong><br><br> Attention is despersed, often requiring specific environments for <strong>productivity</strong> (music, comfort, energy drinks, chocolate...). It may take a while to get a goo focus, since this goes hand in hand with pleasure, but whenever present, it is a hyperfocus, to the point of forgeting everything around.</p>
                      </div>
                   </section>
                   <section id="perfectionism" class="display_flex">
                      <div id="pfct_txt_container">
-                        <p><strong>Perfectionism</strong>: in previous versions, given only by  self-demand. However, in its most recent version, we have controlled the impulses of his mind so that he can calmly use it as advantage for refined work, without falling into paranoia.</p>
+                        <p><strong class="char_titles">Perfectionism</strong><br><br> In previous versions, given only by  self-demand. However, in its most recent version, we have controlled the impulses of his mind so that he can calmly use it as advantage for <strong>refined work</strong>, without falling into paranoia.</p>
                      </div>
                   </section>
+
                   <button id="char_back" class="char_button" type="button" onclick="charButtonClick('back')"><span class="material-symbols-outlined">arrow_back_ios</span></button>
             
                   <button id="char_forward" class="char_button" type="button" onclick="charButtonClick('forward')"><span class="material-symbols-outlined">arrow_forward_ios</span></button>
@@ -137,15 +140,49 @@
                   </div>
                </div>
             </article>
-            <section id="history">
+
+            <article id="story">
                <h2>Story</h2>
-               <p>
-                  His story begins in a small town in the south of Brazil, however, he grew from one side to the other, making hundreds of a new friends, adapting to new realities.
-                  From an early age, detail-oriented, always wanting to gain prominence, which justified the nerd influence he came to have. After a while, the financial infuence gigantically changed his reality, when he began his studies on the stock exchange and general economy. Likewise, later on, thinking about automating financial operations, he began his studies in programming, wich had already been a present desire for some time.
-                  His focus was increasingly on simplicity and sophistication, intelligence and wisdom rather than the superficiality of a nerdy schoolboy. A sudden and difficult change, but also not finalized, in order to always be in touch with evolution, without being too attached to current thoughts and customs.
-                  In no way is justified his way of thinking as correct, but as the chosen one, according to his preferences. Today, focused on what he considers worthwhile, he he studies and learns for the simple pleasure of the process. He revels in his work and hobbies, takings advantage of his skills and creating new ones.
-               </p>
-            </section>
+               <section id="story_1" class="story_container display_flex">
+                  <div id="story_1_txt" class="display_flex">
+                     <p id="story_1_txt_1">
+                        His story begins in a small town in the south of Brazil 
+                     </p>
+                     <p id="story_1_txt_2">
+                        However, he grew from one side to the other, making hundreds of a new friends, adapting to new realities.
+                     </p>
+                  </div>
+               </section>
+               <section id="story_2" class="story_container display_flex">
+                  <div id="story_2_txt" class="display_flex">
+                     <p id="story_2_txt_1">
+                        From an early age, detail-oriented, always wanting to gain prominence, which justified the nerd influence he came to have.
+                     </p>
+                  </div>
+               </section>
+               <section id="story_3" class="story_container display_flex">
+                  <div id="story_3_txt">
+                     <p>
+                        After a while, the financial infuence gigantically changed his reality, when he began his studies on the stock exchange and general economy. Likewise, later on, thinking about automating financial operations, he began his studies in programming, wich had already been a present desire for some time.
+                     </p>
+                  </div>
+               </section>
+               <section id="story_4" class="story_container display_flex">
+                  <div id="story_4_txt">
+                     <p>
+                        His focus was increasingly on simplicity and sophistication, intelligence and wisdom rather than the superficiality of a nerdy schoolboy. A sudden and difficult change, but also not finalized, in order to always be in touch with evolution, without being too attached to current thoughts and customs.
+                     </p>
+                  </div>
+               </section>
+               <section id="story_5" class="story_container display_flex">
+                  <div id="story_5_txt">
+                     <p>
+                        In no way is justified his way of thinking as correct, but as the chosen one, according to his preferences. Today, focused on what he considers worthwhile, he he studies and learns for the simple pleasure of the process. He revels in his work and hobbies, takings advantage of his skills and creating new ones.
+                     </p>
+                  </div>
+               </section>
+            </article>
+
             <section id="skills">
                <h2>Skills</h2>
                <ul>
