Story article - images
--> All images (full versions) added, fonts and alignments;
--> Don't have slide transition.
--> Other improvements to other elements.

--- a/html/index.html
+++ b/html/index.html
@@ -52,16 +52,16 @@
 
       <main class="display_flex">
          <div id="intro_banner_bg" class="bgFixed"></div>
-               <section id="intro_banner" class="display_flex">
-                  <div id="intro_banner_txt">
-                     <h2>FOSN 2023</h2>
-                     <p>Tolerance, dialogue.</p>
-                     <p>No prejudices, no judgements.</p>
-                  </div>
-                  <div id="intro_banner_href">
-                     <p><a href="../html/fosn_versions.html" rel="next" target="_blank">See previous versions</a></p>
-                  </div>
-               </section>
+         <section id="intro_banner" class="display_flex">
+            <div id="intro_banner_txt">
+               <h2>FOSN 2023</h2>
+               <p>Tolerance, dialogue.</p>
+               <p>No prejudices, no judgements.</p>
+            </div>
+            <div id="intro_banner_href">
+               <p><a href="../html/fosn_versions.html" rel="next" target="_blank">See previous versions</a></p>
+            </div>
+         </section>
 
          <div id="presentment">
             <div id="intro_banner_container" style="background-color: #bc5d2e;">
@@ -121,7 +121,7 @@
                   </section>
                   <section id="diversion_attention" class="display_flex">
                      <div id="datt_txt_container">
-                        <p><strong class="char_titles">Diversion of Attention</strong><br><br> Attention is despersed, often requiring specific environments for <strong>productivity</strong> (music, comfort, energy drinks, chocolate...). It may take a while to get a goo focus, since this goes hand in hand with pleasure, but whenever present, it is a hyperfocus, to the point of forgeting everything around.</p>
+                        <p><strong class="char_titles">Diversion of Attention</strong><br><br> Attention is despersed, often requiring specific environments for <strong>productivity</strong> (music, comfort, energy drinks, chocolate...). It may take a while to get a goo focus, since this goes hand in hand with pleasure, but whenever present, it is a <strong>hyperfocus</strong>, to the point of forgeting everything around.</p>
                      </div>
                   </section>
                   <section id="perfectionism" class="display_flex">
@@ -142,42 +142,50 @@
             </article>
 
             <article id="story">
-               <h2>Story</h2>
                <section id="story_1" class="story_container display_flex">
                   <div id="story_1_txt" class="display_flex">
-                     <p id="story_1_txt_1">
+                     <p id="story_1_txt_1" class="txt_marker">
                         His story begins in a small town in the south of Brazil 
                      </p>
-                     <p id="story_1_txt_2">
+                     <p id="story_1_txt_2" class="txt_marker">
                         However, he grew from one side to the other, making hundreds of a new friends, adapting to new realities.
                      </p>
                   </div>
                </section>
                <section id="story_2" class="story_container display_flex">
-                  <div id="story_2_txt" class="display_flex">
-                     <p id="story_2_txt_1">
+                  <div id="story_2_txt">
+                     <p id="story_2_txt_1" class="txt_marker">
                         From an early age, detail-oriented, always wanting to gain prominence, which justified the nerd influence he came to have.
                      </p>
                   </div>
                </section>
                <section id="story_3" class="story_container display_flex">
                   <div id="story_3_txt">
-                     <p>
-                        After a while, the financial infuence gigantically changed his reality, when he began his studies on the stock exchange and general economy. Likewise, later on, thinking about automating financial operations, he began his studies in programming, wich had already been a present desire for some time.
+                     <p id="story_3_txt_1" class="txt_marker">
+                        After a while, the financial infuence gigantically changed his reality, when he began his studies on the stock exchange and general economy. 
+                     </p>
+                     <p id="story_3_txt_2" class="txt_marker">
+                        Likewise, later on, thinking about automating financial operations, he began his studies in programming, wich had already been a present desire for some time.
                      </p>
                   </div>
                </section>
                <section id="story_4" class="story_container display_flex">
-                  <div id="story_4_txt">
-                     <p>
-                        His focus was increasingly on simplicity and sophistication, intelligence and wisdom rather than the superficiality of a nerdy schoolboy. A sudden and difficult change, but also not finalized, in order to always be in touch with evolution, without being too attached to current thoughts and customs.
-                     </p>
-                  </div>
+                     <div id="story_4_txt">
+                        <p id="story_4_txt_1" class="txt_marker">
+                           His focus was increasingly on simplicity and sophistication, intelligence and wisdom rather than the superficiality of a nerdy schoolboy.
+                        </p>
+                        <p id="story_4_txt_2" class="txt_marker">
+                           A sudden and difficult change, but also not finalized, in order to always be in touch with evolution, without being too attached to current thoughts and customs.
+                        </p>
+                     </div>
                </section>
                <section id="story_5" class="story_container display_flex">
                   <div id="story_5_txt">
-                     <p>
-                        In no way is justified his way of thinking as correct, but as the chosen one, according to his preferences. Today, focused on what he considers worthwhile, he he studies and learns for the simple pleasure of the process. He revels in his work and hobbies, takings advantage of his skills and creating new ones.
+                     <p id="story_5_txt_1" class="txt_marker">
+                        In no way is justified his way of thinking as correct, but as the chosen one, according to his preferences. 
+                     </p>
+                     <p id="story_5_txt_2" class="txt_marker">
+                        Today, focused on what he considers worthwhile, he studies and learns for the simple pleasure of the process. He revels in his work and hobbies, taking advantage of his skills and creating new ones.
                      </p>
                   </div>
                </section>
