story font-size
--> Font size of story_3, story_4 and story_5 on screen 'min-width=1200';

--- a/html/index.html
+++ b/html/index.html
@@ -218,4 +218,5 @@
    </body>
 
    <script src="../js/responsiveness.js" defer></script>
+   <script src="../js/slides.js" defer></script>
 </html>
