story animation + skills beggining
--> Slides animation of "Story" made;
--> Skills beggining: starting with artwork of "Skills" header and time experience boxes.

--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
       <link rel="stylesheet" href="../css/styles-992min.css"  media="screen and (min-width: 992px)">
       <link rel="stylesheet" href="../css/styles-1200min.css" media="screen and (min-width: 1200px)">
 
-      <title>Fabio O.S. Netto</title>
+      <title>Fabio O.S. Netto 2023</title>
    </head>
 
    <style>
@@ -192,7 +192,29 @@
             </article>
 
             <section id="skills">
-               <h2>Skills</h2>
+               <div id="skills_header_container">
+                  <div id="skills_shape_1"></div>
+                  <div id="skills_shape_2"></div>
+                  <div id="skills_shape_3"></div>
+                  <div id="skills_shape_4"></div>
+
+                  <div id="skills_header">
+                     <h2>And About the Skills</h2>
+                  </div>
+               </div>
+
+               <div id="experience_time" class="display_flex">
+                  <div class="display_flex">
+                     <p>+<span class="number">200</span>h<br>Courses</p>
+                  </div>
+                  <div id="exp_time_middle" class="display_flex">
+                     <p>+<span class="number">1300</span>h<br>Developing</p>
+                  </div>
+                  <div class="display_flex">
+                     <p>+<span class="number">5000</span>h<br>Graphic Analysis</p>
+                  </div>
+               </div>
+
                <ul>
                   <li>Programming</li>
                   <li>(Courses and sites, one by one); (Sites: slides = GTA screen loading; text describing + background of website with paralax effect). HTML, CSS, Algorithm, JS, SQL</li>
