--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
-      <!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">-->
+      <link rel="shortcut icon" href="../favicon/favicon.ico" type="image/x-icon">
       <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>-->
 
       <link rel="preload" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -205,7 +205,7 @@
 
                <div id="experience_time" class="display_flex">
                   <div class="display_flex">
-                     <p>+<span class="number">200</span>h<br>Courses</p>
+                     <p>+<span class="number">300</span>h<br>Courses</p>
                   </div>
                   <div id="exp_time_middle" class="display_flex">
                      <p>+<span class="number">1300</span>h<br>Developing</p>
