--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
       <link rel="stylesheet" href="../css/styles-992min.css"  media="screen and (min-width: 992px)">
       <link rel="stylesheet" href="../css/styles-1200min.css" media="screen and (min-width: 1200px)">
 
-      <title>Fabio O.S. Netto 2023</title>
+      <title>Fabio O.S. Netto - 2023</title>
    </head>
 
    <style>
@@ -213,6 +213,55 @@
                   <div class="display_flex">
                      <p>+<span class="number">5000</span>h<br>Graphic Analysis</p>
                   </div>
+               </div>
+
+               <div id="courses">
+                  <p id="courses_intro">Some of the courses equipped to his brain piece</p>
+                  
+                  <ul id="courses_list" class="display_flex">
+                     <li class="display_flex">
+                        <div>
+                           <img src="../images/chose/" alt="">
+                           <p>HTML5 and CSS3<br>Online Course<br><span class="number">40 hours</span></p>
+                        </div>
+                     </li>
+                     <li class="display_flex">
+                        <div>
+                           <img src="../images/chose/" alt="">
+                           <p>Javascript<br>Online Course<br><span class="number">40 hours</span></p>
+                        </div>
+                     </li>
+                     <li class="display_flex">
+                        <div>
+                           <img src="../images/chose/" alt="">
+                           <p>MySql<br>Online Course<br><span class="number">40 hours</span></p>
+                        </div>
+                     </li>
+                     <li class="display_flex">
+                        <div>
+                           <img src="../images/chose/" alt="">
+                           <p>Algorithm<br>Online Course<br><span class="number">40 hours</span></p>
+                        </div>
+                     </li>
+                     <li class="display_flex">
+                        <div>
+                           <img src="../images/chose/" alt="">
+                           <p>Git and Github<br>Online Course<br><span class="number">20 hours</span></p>
+                        </div>
+                     </li>
+                     <li class="display_flex">
+                        <div>
+                           <img src="../images/chose/" alt="">
+                           <p>Numeric Bases<br>Online Course<br><span class="number">20 hours</span></p>
+                        </div>
+                     </li>
+                     <li class="display_flex">
+                        <div>
+                           <img src="../images/chose/" alt="">
+                           <p>Price Action<br>Online Course<br><span class="number">50 hours</span></p>
+                        </div>
+                     </li>
+                  </ul>
                </div>
 
                <ul>
