adding images for courses
--> Courses section now with images (the logos of each course);
--> Without the correct size yet.

--- a/html/index.html
+++ b/html/index.html
@@ -221,43 +221,43 @@
                   <ul id="courses_list" class="display_flex">
                      <li class="display_flex">
                         <div>
-                           <img src="../images/chose/" alt="">
+                           <img src="../images/chose/html5_css3_logo-edited.png" alt="">
                            <p>HTML5 and CSS3<br>Online Course<br><span class="number">40 hours</span></p>
                         </div>
                      </li>
                      <li class="display_flex">
                         <div>
-                           <img src="../images/chose/" alt="">
+                           <img src="../images/chose/js_logo-edited.png" alt="">
                            <p>Javascript<br>Online Course<br><span class="number">40 hours</span></p>
                         </div>
                      </li>
                      <li class="display_flex">
                         <div>
-                           <img src="../images/chose/" alt="">
+                           <img src="../images/chose/mysql_logo-edited.png" alt="">
                            <p>MySql<br>Online Course<br><span class="number">40 hours</span></p>
                         </div>
                      </li>
                      <li class="display_flex">
                         <div>
-                           <img src="../images/chose/" alt="">
+                           <img src="../images/chose/algorithm_logo-edited.png" alt="">
                            <p>Algorithm<br>Online Course<br><span class="number">40 hours</span></p>
                         </div>
                      </li>
                      <li class="display_flex">
                         <div>
-                           <img src="../images/chose/" alt="">
+                           <img src="../images/chose/git_github_logo-edited.png" alt="">
                            <p>Git and Github<br>Online Course<br><span class="number">20 hours</span></p>
                         </div>
                      </li>
                      <li class="display_flex">
                         <div>
-                           <img src="../images/chose/" alt="">
+                           <img src="../images/chose/numeric_bases_logo-edited.png" alt="">
                            <p>Numeric Bases<br>Online Course<br><span class="number">20 hours</span></p>
                         </div>
                      </li>
                      <li class="display_flex">
                         <div>
-                           <img src="../images/chose/" alt="">
+                           <img src="../images/chose/price_action_logo-edited.png" alt="">
                            <p>Price Action<br>Online Course<br><span class="number">50 hours</span></p>
                         </div>
                      </li>
