courses items and its media queries
--> All courses items added (text and images);
--> Missing anchor to leave the course platform;
--> Media queries, shadows, transitions, fonts... all added.

--- a/html/index.html
+++ b/html/index.html
@@ -220,45 +220,52 @@
                   
                   <ul id="courses_list" class="display_flex">
                      <li class="display_flex">
-                        <div>
-                           <img src="../images/chose/html5_css3_logo-edited.png" alt="">
-                           <p>HTML5 and CSS3<br>Online Course<br><span class="number">40 hours</span></p>
+                        <div class="cursoemvideo">
+                           <img src="../images/chose/courses/html5_css3_logo-edited.png" alt="CSS3 and HTML5 logos">
+                           <h3>HTML5 and CSS3</h3>
+                           <p>Online Course<br><span class="number">40 hours</span></p>
                         </div>
                      </li>
                      <li class="display_flex">
-                        <div>
-                           <img src="../images/chose/js_logo-edited.png" alt="">
-                           <p>Javascript<br>Online Course<br><span class="number">40 hours</span></p>
+                        <div class="cursoemvideo">
+                           <img src="../images/chose/courses/js_logo-edited.png" alt="Javascript Logo">
+                           <h3>Javascript</h3>
+                           <p>Online Course<br><span class="number">40 hours</span></p>
                         </div>
                      </li>
                      <li class="display_flex">
-                        <div>
-                           <img src="../images/chose/mysql_logo-edited.png" alt="">
-                           <p>MySql<br>Online Course<br><span class="number">40 hours</span></p>
+                        <div class="cursoemvideo">
+                           <img src="../images/chose/courses/mysql_logo-edited.png" alt="MySql Logo">
+                           <h3>MySql</h3>
+                           <p>Online Course<br><span class="number">40 hours</span></p>
                         </div>
                      </li>
                      <li class="display_flex">
-                        <div>
-                           <img src="../images/chose/algorithm_logo-edited.png" alt="">
-                           <p>Algorithm<br>Online Course<br><span class="number">40 hours</span></p>
+                        <div class="cursoemvideo">
+                           <img src="../images/chose/courses/algorithm_logo-edited.png" alt="Algorithm Logo">
+                           <h3>Algorithm</h3>
+                           <p>Online Course<br><span class="number">40 hours</span></p>
                         </div>
                      </li>
                      <li class="display_flex">
-                        <div>
-                           <img src="../images/chose/git_github_logo-edited.png" alt="">
-                           <p>Git and Github<br>Online Course<br><span class="number">20 hours</span></p>
+                        <div class="cursoemvideo">
+                           <img src="../images/chose/courses/git_github_logo-edited.png" alt="Git and Github Logo">
+                           <h3>Git and Github</h3>
+                           <p>Online Course<br><span class="number">20 hours</span></p>
                         </div>
                      </li>
                      <li class="display_flex">
-                        <div>
-                           <img src="../images/chose/numeric_bases_logo-edited.png" alt="">
-                           <p>Numeric Bases<br>Online Course<br><span class="number">20 hours</span></p>
+                        <div class="cursoemvideo">
+                           <img src="../images/chose/courses/numeric_bases_logo-edited.png" alt="Numeric Bases Logo">
+                           <h3>Numeric Bases</h3>
+                           <p>Online Course<br><span class="number">20 hours</span></p>
                         </div>
                      </li>
                      <li class="display_flex">
-                        <div>
-                           <img src="../images/chose/price_action_logo-edited.png" alt="">
-                           <p>Price Action<br>Online Course<br><span class="number">50 hours</span></p>
+                        <div class="ogroflix">
+                           <img src="../images/chose/courses/price_action_logo-edited.png" alt="Price Action Logo">
+                           <h3>Price Action</h3>
+                           <p>Online Course<br><span class="number">50 hours</span></p>
                         </div>
                      </li>
                   </ul>
